[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=3]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=5]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.705882, 0.741176, 0.278431, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.812
anchor_top = 0.841
anchor_right = 0.915
anchor_bottom = 0.932
margin_left = 0.491211
margin_top = -0.319092
margin_right = -0.348755
margin_bottom = 0.160889
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "MENU_back"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.238
anchor_top = 0.139
anchor_right = 0.761
anchor_bottom = 0.774
margin_left = -2.15985
margin_top = 0.0569077
margin_right = -0.599915
margin_bottom = -0.143127
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.2
anchor_top = 0.226
anchor_right = 0.8
anchor_bottom = 0.774
margin_left = -0.199997
margin_top = 0.217995
margin_right = 0.200012
margin_bottom = -0.218018
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="display" type="Button" parent="Panel/VBoxContainer"]
margin_right = 402.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_display"
clip_text = true

[node name="sound" type="Button" parent="Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 402.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 7 )
disabled = true
text = "SETTINGS_sound"
clip_text = true

[node name="contols" type="Button" parent="Panel/VBoxContainer"]
margin_top = 200.0
margin_right = 402.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_controls"
clip_text = true

[node name="view_logs" type="Button" parent="."]
anchor_left = 0.927
anchor_top = 0.062
anchor_right = 0.927
anchor_bottom = 0.062
margin_left = -43.5601
margin_top = -19.64
margin_right = 42.4399
margin_bottom = 19.36
text = "SETTINGS_logs"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/display" to="." method="_on_display_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/contols" to="." method="_on_contols_pressed"]
[connection signal="pressed" from="view_logs" to="." method="_on_view_logs_pressed"]
